# multicast-socket

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: android.yml  cross_compile.yml  main.yml  mips.yml
examples/: mdns.rs
src/: lib.rs  unix.rs  win.rs
