[package]
name = 'multicast-socket'
description = 'Single-socket multi-interface multicast socket'
version = '0.1.0'
authors = ['Bruno Tavares <connect+github@bltavares.com>']
edition = '2018'
homepage = 'https://github.com/bltavares/multicast-socket'
repository = 'https://github.com/bltavares/multicast-socket'
readme = 'README.md'
license = 'MIT OR Apache-2.0'
keywords = ['multicast']

[dependencies]
get_if_addrs = '0.5.3'

[dependencies.socket2]
version = '0.3.12'
features = ['reuseport']

[target.'cfg(windows)'.dependencies.winapi]
version = '0.3.9'
features = ['mswsock']

[target.'cfg(not(windows))'.dependencies.nix]
# Needs https://github.com/nix-rust/nix/pull/1265 which is unreleased as of today
# version = '0.18.0'
git = 'https://github.com/bltavares/nix'
branch = 'sendmsg-pktinfo-android'

[target.'cfg(not(windows))'.dependencies.libc]
# Needs to be the same as the version used by nix
git = 'https://github.com/rust-lang/libc'